# Kuvatin

./: .gitattributes  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.claude/: launch.json
.github/workflows/: release.yml
crates/kuvatin/: Cargo.toml  build.rs
crates/kuvatin-core/: Cargo.toml
crates/kuvatin-core/src/: batch.rs  crop.rs  format.rs  lib.rs  naming.rs  pipeline.rs  preset.rs  resize.rs
crates/kuvatin-core/tests/: batch_integration.rs
crates/kuvatin-video/: Cargo.toml
crates/kuvatin-video/src/: lib.rs  player.rs  project.rs
crates/kuvatin/macos/: Info.plist
crates/kuvatin/src/: cli.rs  collect.rs  gui.rs  main.rs  preview.rs  quickrun.rs
crates/kuvatin/src/shell/: macos.rs  mod.rs  windows.rs
crates/kuvatin/ui/: app.slint
crates/kuvatin/wix/: License.rtf  README.md  bundle-gstreamer.ps1  main.wxs
docs/: index.html  og.html
docs/superpowers/audits/: 2026-07-02-kuvatin-audit.html
docs/superpowers/plans/: 2026-06-21-kuvatin.md  2026-06-23-kuvatin-macos.md  2026-06-30-mode-toggle-and-image-viewer.md  2026-06-30-video-editor-timeline.md  2026-06-30-video-playback-foundation.md  2026-07-02-kuvatin-hardening.md
docs/superpowers/specs/: 2026-06-21-kuvatin-design.md  2026-06-30-video-support-design.md
scripts/: build-macos-dmg.sh
