[workspace]
resolver = "2"
members = ["crates/kuvatin-core", "crates/kuvatin"]

[workspace.package]
version = "1.2.0"
edition = "2021"
license = "GPL-3.0-or-later"

[workspace.dependencies]
image = "0.25"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "1"
anyhow = "1"
directories = "5"
clap = { version = "4", features = ["derive"] }
