[package]
name = "kuvatin-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
image = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
directories = { workspace = true }
webp = "0.3"

[dev-dependencies]
tempfile = "3"
