[package]
name = "kuvatin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["Ensemble <ville.mattila@ensemble.fi>"]
description = "Kuvatin image tool with Windows Explorer context-menu integration"

[[bin]]
name = "kuvatin"
path = "src/main.rs"

[dependencies]
kuvatin-core = { path = "../kuvatin-core" }
clap = { workspace = true }
anyhow = { workspace = true }
image = { workspace = true }
slint = { version = "1.8", features = ["raw-window-handle-06"] }
rfd = "0.14"

[target.'cfg(windows)'.dependencies]
raw-window-handle = "0.6"
windows = { version = "0.58", features = [
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Dwm",
] }

[build-dependencies]
slint-build = "1.8"

[dev-dependencies]
tempfile = "3"
