[package]
name = "kuvatin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["Ensemble <ville.mattila@ensemble.fi>"]
description = "Kuvatin image tool with Windows Explorer context-menu integration"

[[bin]]
name = "kuvatin"
path = "src/main.rs"

[dependencies]
kuvatin-core = { path = "../kuvatin-core" }
clap = { workspace = true }
anyhow = { workspace = true }
image = { workspace = true }
slint = { version = "1.8", features = ["raw-window-handle-06"] }
rfd = "0.14"

[target.'cfg(target_os = "macos")'.dependencies]
raw-window-handle = "0.6"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSArray",
    "NSString",
    "NSGeometry",
    "NSObjCRuntime",
    "NSEnumerator",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSView",
    "NSResponder",
    "NSPasteboard",
    "NSDragging",
    "NSGraphics",
] }

[target.'cfg(windows)'.dependencies]
raw-window-handle = "0.6"
windows = { version = "0.58", features = [
    "Win32_System_Registry",
    "Win32_System_Ole",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Dwm",
] }

[build-dependencies]
slint-build = "1.8"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dev-dependencies]
tempfile = "3"
